add main component Chess.jsx and link with backend [need decide some logic eerors on backend]

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "apollo-client": "latest",
     "apollo-utilities": "latest",
     "apollo-link-error": "latest",
-    "apollo-cache-inmemory": "latest"
+    "apollo-cache-inmemory": "latest",
+    "graphql-tag": "latest"
   },
   "devDependencies": {
     "eslint": "^5.15.3",
