--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chess",
+  "name": "react-chess-multiplayer-game",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,28 +9,21 @@
     "apollo-link-http": "^1.5.14",
     "apollo-link-state": "^0.4.2",
     "apollo-link-ws": "^1.0.17",
-    "babel-eslint": "^10.0.3",
     "chess.js": "^0.10.2",
-    "eslint-plugin-prettier": "^3.1.0",
     "graphql": "^14.2.1",
     "install": "^0.12.2",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "npm": "^6.9.0",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
+    "react": "^16.8.5",
     "react-apollo": "^2.5.3",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.8.5",
     "react-draggable": "^3.2.1",
     "react-moment": "^0.9.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.1.1",
-    "subscriptions-transport-ws": "^0.9.16",
-    "apollo-client": "latest",
-    "apollo-utilities": "latest",
-    "apollo-link-error": "latest",
-    "apollo-cache-inmemory": "latest",
-    "graphql-tag": "latest"
+    "react-scripts": "2.1.8",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
     "eslint": "^5.15.3",
@@ -43,28 +36,17 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
